Update CLI scan tool to use config-based approach.

--- a/nbs/cli/pattern_scanner.ipynb
+++ b/nbs/cli/pattern_scanner.ipynb
@@ -42,7 +42,9 @@
     "import ast\n",
     "import re\n",
     "from typing import List, Dict, Tuple, Optional, Set, Any\n",
-    "from dataclasses import dataclass"
+    "from dataclasses import dataclass\n",
+    "\n",
+    "from cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config"
    ]
   },
   {
@@ -830,26 +832,26 @@
     {
      "data": {
       "text/plain": [
-       "['grid-flow-row',\n",
-       " 'lg:grid-cols-4',\n",
-       " 'order-first',\n",
-       " 'auto-cols-fr',\n",
-       " 'col-span-full',\n",
-       " 'auto-cols-max',\n",
-       " 'max-w-lg',\n",
-       " 'grid-cols-2',\n",
-       " 'columns-lg',\n",
-       " 'space-x-reverse',\n",
-       " 'min-h-lvh',\n",
-       " 'col-span-1',\n",
-       " 'fixed',\n",
-       " 'max-h-0',\n",
-       " '-order-1',\n",
-       " '-m-px',\n",
-       " 'min-h-px',\n",
-       " 'box-decoration-slice',\n",
-       " 'min-h-dvh',\n",
-       " 'min-w-xs']"
+       "['outline-current',\n",
+       " 'text-shadow-black',\n",
+       " 'shadow-blue-300',\n",
+       " 'flex-row-reverse',\n",
+       " 'border-r-2',\n",
+       " 'underline-offset-4',\n",
+       " 'ring-inherit',\n",
+       " 'content-stretch',\n",
+       " 'inset-shadow-2xs',\n",
+       " 'field-sizing-fixed',\n",
+       " '-scroll-pt-2',\n",
+       " 'outline-zinc-500',\n",
+       " 'bg-blend-screen',\n",
+       " 'outline-teal-500',\n",
+       " 'inset-shadow-none',\n",
+       " 'gap-x-4',\n",
+       " 'rounded-sm',\n",
+       " 'proportional-nums',\n",
+       " 'bg-conic-90',\n",
+       " 'text-green-600']"
       ]
      },
      "execution_count": null,
@@ -1332,9 +1334,13 @@
     "#| export\n",
     "def get_migration_suggestions(\n",
     "    matches: Dict[str, CSSClassMatch],  # Dictionary of CSS class matches\n",
-    "    assertion_patterns: List[AssertionPattern]  # List of all assertion patterns from tests\n",
+    "    assertion_patterns: List[AssertionPattern],  # List of all assertion patterns from tests\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> Dict[str, List[str]]:  # Dictionary mapping CSS classes to their migration suggestions\n",
     "    \"Generate migration suggestions for matched CSS classes.\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
     "    suggestions = {}\n",
     "    \n",
     "    for css_class, match in matches.items():\n",
@@ -1346,7 +1352,7 @@
     "            if assertion:\n",
     "                # Extract feature name from example name\n",
     "                feature = assertion.example_name.replace(f'test_{assertion.module_name}_', '').replace('_examples', '')\n",
-    "                suggestion = f\"View example: cjm-tailwind-explore example {assertion.module_name} {feature}\"\n",
+    "                suggestion = f\"View example: {config.cli_command} example {assertion.module_name} {feature}\"\n",
     "                class_suggestions.append(suggestion)\n",
     "                \n",
     "                # Check if the factory expression might be a helper function\n",
@@ -1358,7 +1364,7 @@
     "                    # Check if this might be a helper (not a factory like p.x or w.full)\n",
     "                    if not ('.' in func_name and len(func_name.split('.')) == 2):\n",
     "                        # This looks like a helper function\n",
-    "                        helper_suggestion = f\"View helper: cjm-tailwind-explore helper {assertion.module_name} {func_name}\"\n",
+    "                        helper_suggestion = f\"View helper: {config.cli_command} helper {assertion.module_name} {func_name}\"\n",
     "                        class_suggestions.append(helper_suggestion)\n",
     "                \n",
     "        elif match.match_type == MatchType.PATTERN:\n",
@@ -1371,7 +1377,7 @@
     "                # Show up to 3 unique examples\n",
     "                for assertion in pattern_assertions:\n",
     "                    feature = assertion.example_name.replace(f'test_{assertion.module_name}_', '').replace('_examples', '')\n",
-    "                    suggestion = f\"cjm-tailwind-explore example {assertion.module_name} {feature}\"\n",
+    "                    suggestion = f\"{config.cli_command} example {assertion.module_name} {feature}\"\n",
     "                    unique_suggestions.add(suggestion)\n",
     "                    \n",
     "                    # Stop if we have 3 unique suggestions\n",
@@ -1576,8 +1582,8 @@
       "  ✓ Exact match found\n",
       "\n",
       "Class: 'font-bold'\n",
-      "  Match Type: no_match\n",
-      "  ✗ No match found\n",
+      "  Match Type: exact\n",
+      "  ✓ Exact match found\n",
       "\n",
       "Class: 'items-center'\n",
       "  Match Type: exact\n",
@@ -1639,8 +1645,8 @@
       "~ py-12                → pattern    (pattern: py)\n",
       "~ mt-16                → pattern    (pattern: mt)\n",
       "~ gap-10               → pattern    (pattern: gap)\n",
-      "✗ font-bold            → no_match  \n",
-      "✗ text-blue-600        → no_match  \n",
+      "✓ font-bold            → exact     \n",
+      "~ text-blue-600        → pattern    (pattern: text-blue)\n",
       "✗ hover:bg-gray-100    → no_match  \n",
       "~ -mx-4                → pattern    (pattern: -mx)\n",
       "~ w-1/3                → pattern    (pattern: w)\n",
@@ -1694,16 +1700,14 @@
       "CSS Class Analysis Results:\n",
       "============================================================\n",
       "\n",
-      "✓ Exact Matches (4):\n",
+      "✓ Exact Matches (5):\n",
       "  - flex\n",
+      "  - font-bold\n",
       "  - items-center\n",
       "  - px-6\n",
       "  - py-4\n",
       "\n",
-      "✗ No Matches (1):\n",
-      "  - font-bold\n",
-      "\n",
-      "Summary: 4/5 classes are potentially replaceable\n"
+      "Summary: 5/5 classes are potentially replaceable\n"
      ]
     }
    ],
@@ -1740,30 +1744,28 @@
       "Total cls= patterns found: 3\n",
       "Unique CSS classes: 5\n",
       "\n",
-      "Replaceable Classes: 4/5\n",
-      "  - Exact matches: 4\n",
+      "Replaceable Classes: 5/5\n",
+      "  - Exact matches: 5\n",
       "  - Pattern matches: 0\n",
-      "  - No matches: 1\n",
+      "  - No matches: 0\n",
       "\n",
       "CSS Class Analysis Results:\n",
       "============================================================\n",
       "\n",
-      "✓ Exact Matches (4):\n",
+      "✓ Exact Matches (5):\n",
       "  - flex\n",
+      "  - font-bold\n",
       "  - items-center\n",
       "  - px-6\n",
       "  - py-4\n",
       "\n",
-      "✗ No Matches (1):\n",
-      "  - font-bold\n",
-      "\n",
-      "Summary: 4/5 classes are potentially replaceable\n",
+      "Summary: 5/5 classes are potentially replaceable\n",
       "\n",
       "Patterns by Line:\n",
       "------------------------------------------------------------\n",
       "Line 12: ✓ combine_classes('flex', justify.between, items.center, 'px-6', 'py-4', 'items-center')\n",
       "         ↳ Already uses combine_classes\n",
-      "Line 6: ✗ 'font-bold'\n",
+      "Line 6: ✓ 'font-bold'\n",
       "Line 9: ✓ combine_classes('flex', gap(4))\n",
       "         ↳ Already uses combine_classes\n"
      ]
@@ -1795,43 +1797,46 @@
       "Total cls= patterns found: 4\n",
       "Unique CSS classes: 19\n",
       "\n",
-      "Replaceable Classes: 10/19\n",
-      "  - Exact matches: 7\n",
-      "  - Pattern matches: 3\n",
-      "  - No matches: 9\n",
+      "Replaceable Classes: 18/19\n",
+      "  - Exact matches: 12\n",
+      "  - Pattern matches: 6\n",
+      "  - No matches: 1\n",
       "\n",
       "CSS Class Analysis Results:\n",
       "============================================================\n",
       "\n",
-      "✓ Exact Matches (7):\n",
+      "✓ Exact Matches (12):\n",
       "  - flex\n",
       "  - flex-col\n",
+      "  - font-bold\n",
       "  - items-center\n",
       "  - justify-center\n",
       "  - mb-4\n",
       "  - min-h-screen\n",
       "  - px-8\n",
+      "  - rounded-lg\n",
+      "  - text-6xl\n",
+      "  - text-white\n",
+      "  - text-xl\n",
       "\n",
-      "~ Pattern Matches (3):\n",
+      "~ Pattern Matches (6):\n",
+      "  - bg-blue-600 → matches pattern 'bg-blue-*'\n",
+      "    Examples: bg-blue-300, bg-blue-300/75, bg-blue-500\n",
       "  - mb-8 → matches pattern 'mb-*'\n",
       "    Examples: mb-4\n",
       "  - px-4 → matches pattern 'px-*'\n",
       "    Examples: px-6, px-8\n",
       "  - py-3 → matches pattern 'py-*'\n",
       "    Examples: py-4, py-8\n",
+      "  - text-gray-600 → matches pattern 'text-gray-*'\n",
+      "    Examples: text-gray-500\n",
+      "  - text-gray-900 → matches pattern 'text-gray-*'\n",
+      "    Examples: text-gray-500\n",
       "\n",
-      "✗ No Matches (9):\n",
-      "  - bg-blue-600\n",
-      "  - font-bold\n",
+      "✗ No Matches (1):\n",
       "  - hover:bg-blue-700\n",
-      "  - rounded-lg\n",
-      "  - text-6xl\n",
-      "  - text-gray-600\n",
-      "  - text-gray-900\n",
-      "  - text-white\n",
-      "  - text-xl\n",
       "\n",
-      "Summary: 10/19 classes are potentially replaceable\n",
+      "Summary: 18/19 classes are potentially replaceable\n",
       "\n",
       "Patterns by Line:\n",
       "------------------------------------------------------------\n",
@@ -1886,7 +1891,10 @@
       "============================================================\n",
       "\n",
       "✓ flex:\n",
-      "  → View example: cjm-tailwind-explore example layout display\n",
+      "  → View example: cjm-tailwind-explore example flexbox_and_grid display\n",
+      "\n",
+      "✓ font-bold:\n",
+      "  → View example: cjm-tailwind-explore example typography font_weight\n",
       "\n",
       "✓ items-center:\n",
       "  → View example: cjm-tailwind-explore example flexbox_and_grid align\n",
@@ -1926,11 +1934,18 @@
       "Migration Suggestions\n",
       "============================================================\n",
       "\n",
+      "~ bg-blue-600:\n",
+      "  → Pattern example 1: cjm-tailwind-explore example backgrounds color\n",
+      "  → Pattern example 2: cjm-tailwind-explore example backgrounds opacity\n",
+      "\n",
       "✓ flex:\n",
-      "  → View example: cjm-tailwind-explore example layout display\n",
+      "  → View example: cjm-tailwind-explore example flexbox_and_grid display\n",
       "\n",
       "✓ flex-col:\n",
       "  → View example: cjm-tailwind-explore example flexbox_and_grid direction\n",
+      "\n",
+      "✓ font-bold:\n",
+      "  → View example: cjm-tailwind-explore example typography font_weight\n",
       "\n",
       "✓ items-center:\n",
       "  → View example: cjm-tailwind-explore example flexbox_and_grid align\n",
@@ -1957,6 +1972,24 @@
       "~ py-3:\n",
       "  → Pattern example 1: cjm-tailwind-explore example spacing directional\n",
       "  → Pattern example 2: cjm-tailwind-explore example spacing helper\n",
+      "\n",
+      "✓ rounded-lg:\n",
+      "  → View example: cjm-tailwind-explore example borders radius\n",
+      "\n",
+      "✓ text-6xl:\n",
+      "  → View example: cjm-tailwind-explore example typography font_size\n",
+      "\n",
+      "~ text-gray-600:\n",
+      "  → Pattern example 1: cjm-tailwind-explore example typography text_color\n",
+      "\n",
+      "~ text-gray-900:\n",
+      "  → Pattern example 1: cjm-tailwind-explore example typography text_color\n",
+      "\n",
+      "✓ text-white:\n",
+      "  → View example: cjm-tailwind-explore example typography text_color\n",
+      "\n",
+      "✓ text-xl:\n",
+      "  → View example: cjm-tailwind-explore example typography font_size\n",
       "\n"
      ]
     }
@@ -1985,30 +2018,28 @@
       "Total cls= patterns found: 3\n",
       "Unique CSS classes: 5\n",
       "\n",
-      "Replaceable Classes: 4/5\n",
-      "  - Exact matches: 4\n",
+      "Replaceable Classes: 5/5\n",
+      "  - Exact matches: 5\n",
       "  - Pattern matches: 0\n",
-      "  - No matches: 1\n",
+      "  - No matches: 0\n",
       "\n",
       "CSS Class Analysis Results:\n",
       "============================================================\n",
       "\n",
-      "✓ Exact Matches (4):\n",
+      "✓ Exact Matches (5):\n",
       "  - flex\n",
+      "  - font-bold\n",
       "  - items-center\n",
       "  - px-6\n",
       "  - py-4\n",
       "\n",
-      "✗ No Matches (1):\n",
-      "  - font-bold\n",
-      "\n",
-      "Summary: 4/5 classes are potentially replaceable\n",
+      "Summary: 5/5 classes are potentially replaceable\n",
       "\n",
       "Patterns by Line:\n",
       "------------------------------------------------------------\n",
       "Line 12: ✓ combine_classes('flex', justify.between, items.center, 'px-6', 'py-4', 'items-center')\n",
       "         ↳ Already uses combine_classes\n",
-      "Line 6: ✗ 'font-bold'\n",
+      "Line 6: ✓ 'font-bold'\n",
       "Line 9: ✓ combine_classes('flex', gap(4))\n",
       "         ↳ Already uses combine_classes\n",
       "\n",
@@ -2017,7 +2048,10 @@
       "============================================================\n",
       "\n",
       "✓ flex:\n",
-      "  → View example: cjm-tailwind-explore example layout display\n",
+      "  → View example: cjm-tailwind-explore example flexbox_and_grid display\n",
+      "\n",
+      "✓ font-bold:\n",
+      "  → View example: cjm-tailwind-explore example typography font_weight\n",
       "\n",
       "✓ items-center:\n",
       "  → View example: cjm-tailwind-explore example flexbox_and_grid align\n",
@@ -2437,7 +2471,7 @@
      "output_type": "stream",
      "text": [
       "Testing Python file scanning:\n",
-      "Temporary file: /tmp/tmpes5zdh1j.py\n",
+      "Temporary file: /tmp/tmpj_p_npj0.py\n",
       "============================================================\n",
       "Found 6 patterns\n",
       "  Line 13: ['flex', 'justify-between', 'items-center', 'p-4', 'bg-gray-100']\n",
@@ -2510,30 +2544,28 @@
       "Total cls= patterns found: 3\n",
       "Unique CSS classes: 5\n",
       "\n",
-      "Replaceable Classes: 4/5\n",
-      "  - Exact matches: 4\n",
+      "Replaceable Classes: 5/5\n",
+      "  - Exact matches: 5\n",
       "  - Pattern matches: 0\n",
-      "  - No matches: 1\n",
+      "  - No matches: 0\n",
       "\n",
       "CSS Class Analysis Results:\n",
       "============================================================\n",
       "\n",
-      "✓ Exact Matches (4):\n",
+      "✓ Exact Matches (5):\n",
       "  - flex\n",
+      "  - font-bold\n",
       "  - items-center\n",
       "  - px-6\n",
       "  - py-4\n",
       "\n",
-      "✗ No Matches (1):\n",
-      "  - font-bold\n",
-      "\n",
-      "Summary: 4/5 classes are potentially replaceable\n",
+      "Summary: 5/5 classes are potentially replaceable\n",
       "\n",
       "Patterns by Location:\n",
       "------------------------------------------------------------\n",
       "Line 12: ✓ combine_classes('flex', justify.between, items.center, 'px-6', 'py-4', 'items-center')\n",
       "         ↳ Already uses combine_classes\n",
-      "Line 6: ✗ 'font-bold'\n",
+      "Line 6: ✓ 'font-bold'\n",
       "Line 9: ✓ combine_classes('flex', gap(4))\n",
       "         ↳ Already uses combine_classes\n"
      ]
@@ -2569,40 +2601,45 @@
       "Total cls= patterns found: 3\n",
       "Unique CSS classes: 8\n",
       "\n",
-      "Replaceable Classes: 2/8\n",
-      "  - Exact matches: 1\n",
-      "  - Pattern matches: 1\n",
-      "  - No matches: 6\n",
+      "Replaceable Classes: 8/8\n",
+      "  - Exact matches: 6\n",
+      "  - Pattern matches: 2\n",
+      "  - No matches: 0\n",
       "\n",
       "CSS Class Analysis Results:\n",
       "============================================================\n",
       "\n",
-      "✓ Exact Matches (1):\n",
-      "  - mb-4\n",
-      "\n",
-      "~ Pattern Matches (1):\n",
-      "  - p-6 → matches pattern 'p-*'\n",
-      "    Examples: p-0, p-2.5, p-4\n",
-      "\n",
-      "✗ No Matches (6):\n",
+      "✓ Exact Matches (6):\n",
       "  - bg-white\n",
       "  - font-semibold\n",
+      "  - mb-4\n",
       "  - rounded-lg\n",
       "  - shadow-md\n",
       "  - text-2xl\n",
-      "  - text-gray-700\n",
       "\n",
-      "Summary: 2/8 classes are potentially replaceable\n",
+      "~ Pattern Matches (2):\n",
+      "  - p-6 → matches pattern 'p-*'\n",
+      "    Examples: p-0, p-2.5, p-4\n",
+      "  - text-gray-700 → matches pattern 'text-gray-*'\n",
+      "    Examples: text-gray-500\n",
+      "\n",
+      "Summary: 8/8 classes are potentially replaceable\n",
       "\n",
       "Patterns by Location:\n",
       "------------------------------------------------------------\n",
       "Line 7: ✓ 'p-6 bg-white rounded-lg shadow-md'\n",
       "Line 5: ✓ 'text-2xl font-semibold mb-4'\n",
-      "Line 6: ✗ 'text-gray-700'\n",
+      "Line 6: ✓ 'text-gray-700'\n",
       "\n",
       "\n",
       "Migration Suggestions\n",
       "============================================================\n",
+      "\n",
+      "✓ bg-white:\n",
+      "  → View example: cjm-tailwind-explore example backgrounds color\n",
+      "\n",
+      "✓ font-semibold:\n",
+      "  → View example: cjm-tailwind-explore example typography font_weight\n",
       "\n",
       "✓ mb-4:\n",
       "  → View example: cjm-tailwind-explore example spacing margin_directional\n",
@@ -2610,6 +2647,18 @@
       "~ p-6:\n",
       "  → Pattern example 1: cjm-tailwind-explore example spacing basic\n",
       "  → Pattern example 2: cjm-tailwind-explore example spacing helper\n",
+      "\n",
+      "✓ rounded-lg:\n",
+      "  → View example: cjm-tailwind-explore example borders radius\n",
+      "\n",
+      "✓ shadow-md:\n",
+      "  → View example: cjm-tailwind-explore example effects shadow_size\n",
+      "\n",
+      "✓ text-2xl:\n",
+      "  → View example: cjm-tailwind-explore example typography font_size\n",
+      "\n",
+      "~ text-gray-700:\n",
+      "  → Pattern example 1: cjm-tailwind-explore example typography text_color\n",
       "\n"
      ]
     }
