Fix CLI scan tool example viewing commands.

--- a/nbs/cli/example_discovery.ipynb
+++ b/nbs/cli/example_discovery.ipynb
@@ -68,6 +68,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf7bad7e-23cd-44c3-a227-1a038398654b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def get_example_pattern(module_name:str):\n",
+    "    if \".\" in module_name:\n",
+    "        # print(\"Submodule detected.\")\n",
+    "        submodule_name = module_name.split(\".\")[-1]\n",
+    "        # print(f\"Submodule: {submodule_name}\")\n",
+    "        # Pattern to match test functions: test_<submodule>_<feature>_examples\n",
+    "        pattern = re.compile(rf'^test_{submodule_name}_(\\w+)_examples$')\n",
+    "    else:    \n",
+    "        # Pattern to match test functions: test_<module>_<feature>_examples\n",
+    "        pattern = re.compile(rf'^test_{module_name}_(\\w+)_examples$')\n",
+    "\n",
+    "    return pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2e0d39e9-4086-47b3-8093-1908fd9132a5",
    "metadata": {},
    "outputs": [],
@@ -80,18 +102,8 @@
     "    \"\"\"Extract all test example functions from a module.\"\"\"\n",
     "    examples = []\n",
     "    \n",
-    "    if \".\" in module_name:\n",
-    "        # print(\"Submodule detected.\")\n",
-    "        submodule_name = module_name.split(\".\")[-1]\n",
-    "        # print(f\"Submodule: {submodule_name}\")\n",
-    "        # Pattern to match test functions: test_<submodule>_<feature>_examples\n",
-    "        pattern = re.compile(rf'^test_{submodule_name}_(\\w+)_examples$')\n",
-    "    else:    \n",
-    "        # Pattern to match test functions: test_<module>_<feature>_examples\n",
-    "        pattern = re.compile(rf'^test_{module_name}_(\\w+)_examples$')\n",
-    "    \n",
     "    for name in dir(module):\n",
-    "        match = pattern.match(name)\n",
+    "        match = get_example_pattern(module_name).match(name)\n",
     "        if match:\n",
     "            try:\n",
     "                func = getattr(module, name)\n",
