--- a/nbs/cli/pattern_scanner.ipynb
+++ b/nbs/cli/pattern_scanner.ipynb
@@ -44,7 +44,8 @@
     "from typing import List, Dict, Tuple, Optional, Set, Any\n",
     "from dataclasses import dataclass\n",
     "\n",
-    "from cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config"
+    "from cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config\n",
+    "from cjm_fasthtml_tailwind.cli.example_discovery import get_example_pattern"
    ]
   },
   {
@@ -832,26 +833,26 @@
     {
      "data": {
       "text/plain": [
-       "['outline-current',\n",
-       " 'text-shadow-black',\n",
-       " 'shadow-blue-300',\n",
-       " 'flex-row-reverse',\n",
-       " 'border-r-2',\n",
-       " 'underline-offset-4',\n",
-       " 'ring-inherit',\n",
-       " 'content-stretch',\n",
-       " 'inset-shadow-2xs',\n",
-       " 'field-sizing-fixed',\n",
-       " '-scroll-pt-2',\n",
-       " 'outline-zinc-500',\n",
-       " 'bg-blend-screen',\n",
-       " 'outline-teal-500',\n",
-       " 'inset-shadow-none',\n",
-       " 'gap-x-4',\n",
-       " 'rounded-sm',\n",
-       " 'proportional-nums',\n",
-       " 'bg-conic-90',\n",
-       " 'text-green-600']"
+       "['snap-mandatory',\n",
+       " 'break-normal',\n",
+       " '-hue-rotate-60',\n",
+       " 'shadow-zinc-500',\n",
+       " 'select-all',\n",
+       " 'transition-none',\n",
+       " '-mask-linear-180',\n",
+       " 'inset-ring-green-500',\n",
+       " 'opacity-95',\n",
+       " 'col-span-full',\n",
+       " 'text-6xl',\n",
+       " 'decoration-yellow-500',\n",
+       " 'inset-ring-green-950',\n",
+       " 'drop-shadow-black',\n",
+       " 'row-start-2',\n",
+       " 'fill-white',\n",
+       " 'align-top',\n",
+       " 'rounded-s-lg',\n",
+       " '-mask-linear-45',\n",
+       " 'p-0']"
       ]
      },
      "execution_count": null,
@@ -1351,7 +1352,7 @@
     "            assertion = find_assertion_for_class(css_class, assertion_patterns)\n",
     "            if assertion:\n",
     "                # Extract feature name from example name\n",
-    "                feature = assertion.example_name.replace(f'test_{assertion.module_name}_', '').replace('_examples', '')\n",
+    "                feature = get_example_pattern(assertion.module_name).match(assertion.example_name).group(1)\n",
     "                suggestion = f\"View example: {config.cli_command} example {assertion.module_name} {feature}\"\n",
     "                class_suggestions.append(suggestion)\n",
     "                \n",
@@ -1376,7 +1377,7 @@
     "                \n",
     "                # Show up to 3 unique examples\n",
     "                for assertion in pattern_assertions:\n",
-    "                    feature = assertion.example_name.replace(f'test_{assertion.module_name}_', '').replace('_examples', '')\n",
+    "                    feature = get_example_pattern(assertion.module_name).match(assertion.example_name).group(1)\n",
     "                    suggestion = f\"{config.cli_command} example {assertion.module_name} {feature}\"\n",
     "                    unique_suggestions.add(suggestion)\n",
     "                    \n",
@@ -2471,7 +2472,7 @@
      "output_type": "stream",
      "text": [
       "Testing Python file scanning:\n",
-      "Temporary file: /tmp/tmpj_p_npj0.py\n",
+      "Temporary file: /tmp/tmp41mrapz5.py\n",
       "============================================================\n",
       "Found 6 patterns\n",
       "  Line 13: ['flex', 'justify-between', 'items-center', 'p-4', 'bg-gray-100']\n",
