Fix view command statements for search results.

--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -811,9 +811,8 @@
     "                if result.content_type == 'factory':\n",
     "                    view_cmd = get_view_command('factory', result.module_name, result.item_name)\n",
     "                elif result.content_type == 'example':\n",
-    "                    # Extract feature from name\n",
-    "                    feature = result.item_name.replace(f'test_{result.module_name}_', '').replace('_examples', '')\n",
-    "                    view_cmd = get_view_command('example', result.module_name, feature)\n",
+    "                    example = next((ex for ex in list_module_examples(result.module_name) if ex.name == result.item_name), None)\n",
+    "                    view_cmd = get_view_command('example', result.module_name, example.feature)\n",
     "                elif result.content_type == 'helper':\n",
     "                    view_cmd = get_view_command('helper', result.module_name, result.item_name)\n",
     "                elif result.content_type == 'module':\n",
