Fix typos in search results.

--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -799,7 +799,7 @@
     "        \n",
     "        # Display results by type\n",
     "        for content_type, type_results in by_type.items():\n",
-    "            print(f\"\\n{content_type.title()}s ({len(type_results)} results)\")\n",
+    "            print(f\"\\n{content_type.title()} ({len(type_results)} results)\")\n",
     "            print(\"-\" * 40)\n",
     "            \n",
     "            for result in type_results:\n",
