Update project description.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# cjm-fasthtml-tailwind\n",
     "\n",
-    "> Python-native Tailwind CSS v4 utility builder providing type-safe, dynamic class generation with full abstraction for FastHTML projects."
+    "> Python-native Tailwind CSS v4 utility builder providing dynamic class generation with full abstraction for FastHTML projects."
    ]
   },
   {
