--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -839,7 +839,7 @@
     "\n",
     "This tool helps you explore the {config.package_name} library, which provides:\n",
     "- Python-native {config.display_name} utility class builders for FastHTML projects\n",
-    "- Type-safe, dynamic CSS class generation without hardcoded strings\n",
+    "- Dynamic CSS class generation without hardcoded strings\n",
     "- Comprehensive utility factories ({example_factories}, etc.)\n",
     "- Helper functions for common patterns\n",
     "- Full integration with FastHTML components\n",
