--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -116,119 +116,121 @@
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
     "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_core_utils_discovery\n",
-    "    cli_display --> cli_search\n",
-    "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_imports\n",
-    "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_test_code\n",
     "    cli_display --> cli_pattern_scanner\n",
+    "    cli_display --> cli_helper_discovery\n",
+    "    cli_display --> cli_cli_config\n",
+    "    cli_display --> cli_imports\n",
+    "    cli_display --> cli_factory_extraction\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_example_discovery\n",
+    "    cli_display --> cli_search\n",
+    "    cli_display --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_factory_extraction\n",
-    "    cli_dynamic_examples --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
-    "    cli_dynamic_examples --> cli_search\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_imports\n",
-    "    cli_dynamic_examples --> cli_cli_config\n",
-    "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
+    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
+    "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_imports\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_display\n",
     "    cli_explorer --> cli_dynamic_examples\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_cli_config\n",
-    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
+    "    cli_factory_extraction --> cli_utils\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_cli_config\n",
-    "    cli_search --> cli_helper_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_pattern_scanner --> cli_cli_config\n",
+    "    cli_pattern_scanner --> cli_example_discovery\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_utils --> cli_cli_config\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_accessibility\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> core_resources\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> core_base\n",
+    "    utilities_accessibility --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
-    "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> core_testing\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> builders_colors\n",
+    "    utilities_borders --> core_testing\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> core_testing\n",
     "    utilities_effects --> builders_scales\n",
+    "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_testing\n",
     "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
-    "    utilities_filters --> core_testing\n",
     "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> core_testing\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> core_testing\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> builders_scales\n",
-    "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
+    "    utilities_sizing --> core_testing\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
-    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> builders_colors\n",
+    "    utilities_spacing --> core_testing\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> core_testing\n",
     "    utilities_svg --> builders_scales\n",
+    "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> core_testing\n",
     "    utilities_tables --> core_base\n",
-    "    utilities_tables --> core_testing\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_transforms --> builders_scales\n",
+    "    utilities_tables --> core_testing\n",
     "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> core_base\n",
-    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> core_testing\n",
     "```\n",
     "\n",
-    "*114 cross-module dependencies detected*"
+    "*116 cross-module dependencies detected*"
    ]
   },
   {
@@ -248,7 +250,7 @@
     "\n",
     "This tool helps you explore the cjm_fasthtml_tailwind library, which provides:\n",
     "- Python-native Tailwind CSS v4 utility class builders for FastHTML projects\n",
-    "- Type-safe, dynamic CSS class generation without hardcoded strings\n",
+    "- Dynamic CSS class generation without hardcoded strings\n",
     "- Comprehensive utility factories (forced_color_adjust, not_sr_only, sr_only, etc.)\n",
     "- Helper functions for common patterns\n",
     "- Full integration with FastHTML components\n",
@@ -1999,7 +2001,8 @@
     "```python\n",
     "def display_search_results(\n",
     "    results: List[SearchResult],  # TODO: Add description\n",
-    "    query: str  # TODO: Add description\n",
+    "    query: str,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
     "): # TODO: Add type hint\n",
     "    \"Display search results in a formatted way.\"\n",
     "```\n",
@@ -2626,6 +2629,7 @@
     "```python\n",
     "from cjm_fasthtml_tailwind.cli.example_discovery import (\n",
     "    ExampleInfo,\n",
+    "    get_example_pattern,\n",
     "    extract_test_examples_from_module,\n",
     "    list_all_examples,\n",
     "    list_module_examples,\n",
@@ -2634,6 +2638,11 @@
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def get_example_pattern(module_name:str):\n",
+    "    if \".\" in module_name\n",
+    "```\n",
     "\n",
     "```python\n",
     "def extract_test_examples_from_module(\n",
@@ -4504,7 +4513,8 @@
     "```python\n",
     "def get_migration_suggestions(\n",
     "    matches: Dict[str, CSSClassMatch],  # Dictionary of CSS class matches\n",
-    "    assertion_patterns: List[AssertionPattern]  # List of all assertion patterns from tests\n",
+    "    assertion_patterns: List[AssertionPattern],  # List of all assertion patterns from tests\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> Dict[str, List[str]]:  # Dictionary mapping CSS classes to their migration suggestions\n",
     "    \"Generate migration suggestions for matched CSS classes.\"\n",
     "```\n",
